<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginHorizontal="40dp"
    >

    <!--  Start : Your code should be within this block -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/welcome_0"
         android:textColor="@color/colorBlack"
         android:layout_marginTop="40dp"
         android:layout_marginHorizontal="5dp"
         android:textSize="30dp"/>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_1"
        android:textColor="@color/colorBlack"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="5dp"
        android:textSize="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textSize="20dp"
        android:text="@string/welcome_2"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/welcome_3"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/welcome_4"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/welcome_5"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/welcome_6"
        android:buttonTint="@color/colorPrimary"
        />

    <Button
        android:layout_width="420dp"
        android:layout_height="wrap_content"
        android:text="@string/welcome_7"
        android:layout_marginTop="35dp"
        android:layout_gravity="center_horizontal"
        android:onClick="next"
        android:background="@color/colorPrimary"/>
    <!-- END    : Your code should be within this block -->
</LinearLayout>