<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginHorizontal="40dp">

    <!--  Start : Your code should be within this block -->
    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:textSize="30dp"
        android:text="@string/q5_0"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/q5_1"
        android:textSize="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginHorizontal="20dp"
        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/cb_7"
        android:text="@string/q4_2"
        android:buttonTint="@color/colorPrimary"
        android:layout_marginLeft="50dp"
        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cb_8"
        android:layout_marginTop="10dp"
        android:text="@string/q4_3"
        android:buttonTint="@color/colorPrimary"
        android:layout_marginLeft="50dp"
        />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/cb_9"
        android:text="@string/q4_4"
        android:buttonTint="@color/colorPrimary"
        android:layout_marginLeft="50dp"
        />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/cb_10"
        android:text="@string/q4_5"
        android:buttonTint="@color/colorPrimary"
        android:layout_marginLeft="50dp"
        />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/cb_11"
        android:text="@string/q4_6"
        android:buttonTint="@color/colorPrimary"
        android:layout_marginLeft="50dp"
        />
    <CheckBox
        android:layout_width="wrap_content"
        android:id="@+id/cb_12"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/q4_7"
        android:buttonTint="@color/colorPrimary"
        android:layout_marginLeft="50dp"
        />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cb_13"
        android:layout_marginTop="10dp"
        android:text="@string/q4_8"
        android:buttonTint="@color/colorPrimary"
        android:layout_marginLeft="50dp"
        />

    <!-- END    : Your code should be within this block -->

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_marginTop="100dp"
        android:background="@color/colorPrimary"
        android:onClick="next"
        />
</LinearLayout>
