<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginHorizontal="40dp">

    <!--  Start : Your code should be within this block -->
    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:textSize="30dp"
        android:text="@string/q12_0"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/q12_1"
        android:textSize="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginHorizontal="20dp"
        />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rg"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="50dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q12_2"
            android:buttonTint="@color/colorPrimary"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q12_3"
            android:buttonTint="@color/colorPrimary"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q12_4"
            android:buttonTint="@color/colorPrimary"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q12_5"
            android:buttonTint="@color/colorPrimary"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q12_6"
            android:buttonTint="@color/colorPrimary"
            />

    </RadioGroup>
    <!-- END    : Your code should be within this block -->

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_marginTop="100dp"
        android:onClick="next"
        android:background="@color/colorPrimary"
        />
</LinearLayout>
