<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginHorizontal="40dp">

    <!--  Start : Your code should be within this block -->
    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:textSize="30dp"
        android:text="@string/q11_0"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/q11_1"
        android:textSize="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginHorizontal="20dp"
        />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:id="@+id/rg"
        android:layout_marginHorizontal="50dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q11_2"
            android:buttonTint="@color/colorPrimary"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q11_3"
            android:buttonTint="@color/colorPrimary"
            />


    </RadioGroup>
    <!-- END    : Your code should be within this block -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:onClick="next"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimary"
            android:layout_marginBottom="20dp"
            />
    </RelativeLayout>

</LinearLayout>
