<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--  Start : Your code should be within this block -->
    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:textSize="30dp"
        android:text="@string/q6_0"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/q6_1"
        android:textSize="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="20dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_marginHorizontal="20dp"
        android:id="@+id/edbox"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:textSize="30dp"
        android:textCursorDrawable="@color/colorPrimary"
        android:backgroundTint="@color/colorPrimary"


        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_marginTop="100dp"
        android:onClick="next"
        android:background="@color/colorPrimary"
        />
    <!-- END    : Your code should be within this block -->

</LinearLayout>
