<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginHorizontal="40dp">

    <!--  Start : Your code should be within this block -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:textSize="30dp"
        android:id="@+id/qNum"
        android:text="@string/q1_0"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/q1_1"
        android:id="@+id/question"
        android:textSize="20dp"
        android:layout_marginHorizontal="20dp"
        />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:id="@+id/rg"
        android:layout_marginHorizontal="50dp">



    </RadioGroup>
    <!-- END    : Your code should be within this block -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:id="@+id/next"
            android:textColor="@color/white"
            android:background="@color/colorPrimaryDark"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:onClick="next"
            />
    </RelativeLayout>

</LinearLayout>
